Tested about page

--- a/about.html
+++ b/about.html
@@ -18,6 +18,8 @@
 
   </head>
   <body>
+
+  TESTING THE ABOUT PAGE
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/eternalistic/zen-grids-html">View On GitHub</a></li>
