Added missing HTML5 script for IE

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<meta name="MobileOptimized" content="width">
 	<meta name="HandheldFriendly" content="true">
-	<meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="cleartype" content="on">
 
 	<title>Zen Grids: sample usage</title>
