Updated Normalize and updated grid overlay and toggle and functionality

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" href="css/style.css" media="all">
 
 </head>
-<body>
+<body class="two-sidebars">
 <!-- 
 Available body classes. Be sure to remove the sidebar region below that may no longer be needed.
 <body>
@@ -47,30 +47,21 @@ Available body classes. Be sure to remove the sidebar region below that may no l
 
 <div id="page">
 
-	<!-- GRID OVERLAY/TOGGLE START -->
-	<div id="grid-toggle"><strong>Grid:</strong> <a href="#"  onclick="toggle_visibility('grid-overlay');"><span>On</span></a></div>
-	<div id="grid-overlay" style="display: block;">
+	<!-- OPTIONAL GRID OVERLAY/TOGGLE START -->
+	<div id="grid-overlay" style="display: none;">
 		<span class="bgcol-1">1</span><span class="bgcol-2">2</span><span class="bgcol-3">3</span><span class="bgcol-4">4</span><span class="bgcol-5">5</span><span class="bgcol-6">6</span><span class="bgcol-7">7</span><span class="bgcol-8">8</span><span class="bgcol-9">9</span><span class="bgcol-10">10</span><span class="bgcol-11">11</span><span class="bgcol-12">12</span><span class="bgcol-13">13</span><span class="bgcol-14">14</span><span class="bgcol-15">15</span><span class="bgcol-16">16</span><span class="bgcol-17">17</span><span class="bgcol-18">18</span><span class="bgcol-19">19</span><span class="bgcol-20">20</span><span class="bgcol-21">21</span><span class="bgcol-22">22</span><span class="bgcol-23">23</span><span class="bgcol-24">24</span>
 	</div><!-- /#grid overlay -->
-	<!-- GRID OVERLAY/TOGGLE END -->
+	<!-- OPTIONAL GRID OVERLAY/TOGGLE END -->
 
 	<p id="skip-link">
 		<a href="#content" class="element-invisible element-focusable">Skip to content</a>
 	</p>
 
-	<header id="toggle-layout">
-		<strong>Sidebars:</strong> 
-    <a href="#both" class="toggle">Both</a>
-		<a href="#first" class="toggle">First</a>
-    <a href="#second" class="toggle">Second</a>
-    <a href="#none" class="toggle">None</a>
-  </header>
-
 	<header id="header" class="block" role="banner">
 		<p>Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nulla vitae elit libero, a pharetra augue.</p>
 	</header>
 
-	<nav id="main-menu" class="block" role="navigation">
+	<nav id="navigation" class="block" role="navigation">
 		<ul>
 			<li class="first"><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
@@ -109,12 +100,17 @@ Available body classes. Be sure to remove the sidebar region below that may no l
 
 </div><!-- /#page -->
 
-<!-- OPTIONAL JAVASCRIPT (jQuery, Sidebars toggle, Grid overlay, and fitWeird) START -->
+<!-- OPTIONAL SETTINGS AND OVERLAY START -->
+<footer id="settings">
+	<div id="grid-toggle"><strong>Grid overlay:</strong> <a href="#" onclick="toggle_visibility('grid-overlay');"><span>Enable</span></a></div>
+	<strong>Sidebar columns:</strong> 
+  <a href="#both" class="toggle active">Both</a><a href="#first" class="toggle">First</a><a href="#second" class="toggle">Second</a><a href="#none" class="toggle">None</a>
+</footer>
 <script src="js/jquery.min.js"></script>
 <script src="js/grid-overlay.js"></script>
 <script src="js/fitWeird.js"></script>
 <script src="js/layoutToggle.js"></script>
-<!-- OPTIONAL JAVASCRIPT (jQuery, Sidebars toggle, Grid overlay, and fitWeird) END -->
+<!-- OPTIONAL SETTINGS AND OVERLAY END -->
 
 </body>
 </html>
