Updated block class so it works better within the grid

--- a/index.html
+++ b/index.html
@@ -57,45 +57,57 @@ Available body classes. Be sure to remove the sidebar region below that may no l
 		<a href="#content" class="element-invisible element-focusable">Skip to content</a>
 	</p>
 
-	<header id="header" class="block" role="banner">
-		<p>Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nulla vitae elit libero, a pharetra augue.</p>
+	<header id="header" role="banner">
+		<div class="block">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+		</div>
 	</header>
 
-	<nav id="navigation" class="block" role="navigation">
-		<ul>
-			<li class="first"><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li class="last"><a href="#">Contact</a></li>
-		</ul>
+	<nav id="navigation" role="navigation">
+		<div class="block">
+			<ul>
+				<li class="first"><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li class="last"><a href="#">Contact</a></li>
+			</ul>
+		</div>
 	</nav><!-- /nav -->
 
-	<div id="main" class="block">
+	<div id="main">
 
-		<div id="content" class="column block" role="main">
-			<a id="main-content"></a>
-			<h1 class="title" id="page-title">Title goes here</h1>
-			<artcle class="node">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
-				<p>Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum.</p>
-			</artcle>
+		<div id="content" role="main">
+			<div class="block">
+				<a id="main-content"></a>
+				<h1 class="title" id="page-title">Title goes here</h1>
+				<artcle class="node">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+					<p>Nulla vitae elit libero, a pharetra augue. Nullam id dolor id nibh ultricies vehicula ut id elit. Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Nullam quis risus eget urna mollis ornare vel eu leo. Cras mattis consectetur purus sit amet fermentum.</p>
+				</artcle>
+			</div>
 		</div><!-- /#content -->
 
 		<aside class="sidebars">
 
-			<section class="region-sidebar-first column sidebar block">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+			<section class="region-sidebar-first column sidebar">
+				<div class="block">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+				</div>
 			</section><!-- /sidebar-first -->
 
-			<section class="region-sidebar-second column sidebar block">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+			<section class="region-sidebar-second column sidebar">
+				<div class="block">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+				</div>
 			</section><!-- /sidebar-second -->
 
 		</aside><!-- /.sidebars -->
 
 	</div><!-- /#main -->
 
-	<footer id="footer" class="block">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+	<footer id="footer">
+		<div class="block">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Donec ullamcorper nulla non metus auctor fringilla.</p>
+		</div>
 	</footer><!-- /footer -->
 
 </div><!-- /#page -->
