Updated script and coding for grid overlay

--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@ Available body classes. Be sure to remove the sidebar region below that may no l
 
 <div id="page">
 
-	<!-- OPTIONAL GRID OVERLAY/TOGGLE START -->
-	<div id="grid-overlay" style="display: none;">
-		<span class="bgcol-1">1</span><span class="bgcol-2">2</span><span class="bgcol-3">3</span><span class="bgcol-4">4</span><span class="bgcol-5">5</span><span class="bgcol-6">6</span><span class="bgcol-7">7</span><span class="bgcol-8">8</span><span class="bgcol-9">9</span><span class="bgcol-10">10</span><span class="bgcol-11">11</span><span class="bgcol-12">12</span><span class="bgcol-13">13</span><span class="bgcol-14">14</span><span class="bgcol-15">15</span><span class="bgcol-16">16</span><span class="bgcol-17">17</span><span class="bgcol-18">18</span><span class="bgcol-19">19</span><span class="bgcol-20">20</span><span class="bgcol-21">21</span><span class="bgcol-22">22</span><span class="bgcol-23">23</span><span class="bgcol-24">24</span>
-	</div><!-- /#grid overlay -->
-	<!-- OPTIONAL GRID OVERLAY/TOGGLE END -->
-
+	<!-- GRID OVERLAY START -->
+	<div id="grid-overlay" style="display:none;"><span class="bgcol-1">1</span><span class="bgcol-2">2</span><span class="bgcol-3">3</span><span class="bgcol-4">4</span><span class="bgcol-5">5</span><span class="bgcol-6">6</span><span class="bgcol-7">7</span><span class="bgcol-8">8</span><span class="bgcol-9">9</span><span class="bgcol-10">10</span><span class="bgcol-11">11</span><span class="bgcol-12">12</span><span class="bgcol-13">13</span><span class="bgcol-14">14</span><span class="bgcol-15">15</span><span class="bgcol-16">16</span><span class="bgcol-17">17</span><span class="bgcol-18">18</span><span class="bgcol-19">19</span><span class="bgcol-20">20</span><span class="bgcol-21">21</span><span class="bgcol-22">22</span><span class="bgcol-23">23</span><span class="bgcol-24">24</span></div>
+	<!-- GRID OVERLAY END -->
+	
 	<p id="skip-link">
 		<a href="#content" class="element-invisible element-focusable">Skip to content</a>
 	</p>
@@ -114,14 +112,14 @@ Available body classes. Be sure to remove the sidebar region below that may no l
 
 <!-- OPTIONAL SETTINGS AND OVERLAY START -->
 <footer id="settings">
-	<div id="grid-toggle"><strong>Grid overlay:</strong> <a href="#" onclick="toggle_visibility('grid-overlay');"><span>Enable</span></a></div>
+	<div id="grid-toggle"><strong>Grid overlay:</strong> <a href="#" id="gridoverlay"><span>Enable</span></a></div>
 	<strong>Sidebar columns:</strong> 
   <a href="#both" class="toggle active">Both</a><a href="#first" class="toggle">First</a><a href="#second" class="toggle">Second</a><a href="#none" class="toggle">None</a>
 </footer>
 <script src="js/jquery.min.js"></script>
 <script src="js/grid-overlay.js"></script>
-<script src="js/fitWeird.js"></script>
 <script src="js/layoutToggle.js"></script>
+<script src="js/fitWeird.js"></script>
 <!-- OPTIONAL SETTINGS AND OVERLAY END -->
 
 </body>
